[package]
name = "rusttracks"
version = "0.0.1"
authors = ["Philipp Brüschweiler <blei42@gmail.com>"]

[dependencies.gtk]
path = "../dumb-gtk"

[dependencies.timerfd]
path = "../timerfd"

[dependencies.http]
git = "https://github.com/chris-morgan/rust-http"

[dependencies.url]
git = "https://github.com/servo/rust-url"
